Edited titles and meta tags

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <meta>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>That Croissant - Twisted Croissant</title>
     <link rel="stylesheet" href="/css/styles.css" />
+    <meta name="description">Welcome to the tasty world of the Twisted Croissant!</meta>
   </head>
   <body>
     <h1>🥐 Croissant</h1>
