--- a/photo.html
+++ b/photo.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>A picture of a sugary delight served in the Twisted Croissant</title>
     <link rel="stylesheet" href="/css/styles.css" />
+    <meta name="description">Have a look at one of the croissants served in the Twisted Croissant!</meta>
   </head>
   <body>
     <h1>🥐 A picture of a croissant</h1>
