--- a/contact.html
+++ b/contact.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <meta>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Contact the Twisted Croissant team</title>
     <link rel="stylesheet" href="/css/styles.css" />
+    <meta name="description">Stay in touch to find out more about tasty croissants!</meta>
   </head>
   <body>
     <h1>🥐 Contact us</h1>
     <p>
       To contact croissant.com, please email us at
-      <a href="mailto:hello@croissant.com">hello@croissant.com</a> for more info
+    <a href="mailto:hello@croissant.com">hello@croissant.com</a> for more info
     </p>
     <div class="container">
       <a href="/index.html">Homepage</a>
