Added an image description, some link titles

--- a/contact.html
+++ b/contact.html
@@ -15,9 +15,9 @@
     <a href="mailto:hello@croissant.com">hello@croissant.com</a> for more info
     </p>
     <div class="container">
-      <a href="/index.html">Homepage</a>
-      <a href="/photo.html">Photo</a>
-      <a href="/contact.html">Contact</a>
+      <a href="/index.html" title="Twisted Croissant homepage">Homepage</a>
+      <a href="/photo.html" title="A croissant served in the Twisted Croissant">Photo</a>
+      <a href="/contact.html" title="Contacts of the Twisted Croissant team">Contact</a>
     </div>
   </body>
 </html>
