--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
       named for its historical crescent shape. Croissants and other viennoiserie
       are made of a layered yeast-leavened dough
     </p>
-    <div class="container">
-      <a href="/index.html">Homepage</a>
-      <a href="/photo.html">Photo</a>
-      <a href="/contact.html">Contact</a>
+     <div class="container">
+      <a href="/index.html" title="Twisted Croissant homepage">Homepage</a>
+      <a href="/photo.html" title="A croissant served in the Twisted Croissant">Photo</a>
+      <a href="/contact.html" title="Contacts of the Twisted Croissant team">Contact</a>
     </div>
   </body>
 </html>
