--- a/photo.html
+++ b/photo.html
@@ -12,12 +12,12 @@
     <h1>🥐 A picture of a croissant</h1>
     <img
       src="https://optimistic-morse-46a9fc.netlify.app/images/croissant.jpg"
-      alt=""
+      alt="A croissant served in the Twisted Croissant"
     />
     <div class="container">
-      <a href="/index.html">Homepage</a>
-      <a href="/photo.html">Photo</a>
-      <a href="/contact.html">Contact</a>
+      <a href="/index.html" title="Twisted Croissant homepage">Homepage</a>
+      <a href="/photo.html" title="A croissant served in the Twisted Croissant">Photo</a>
+      <a href="/contact.html" title="Contacts of the Twisted Croissant team">Contact</a>
     </div>
   </body>
 </html>
